--- a/API call and cleaning/Pittsburgh_CleanExport.ipynb
+++ b/API call and cleaning/Pittsburgh_CleanExport.ipynb
@@ -45,11 +45,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -135,107 +130,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Stevie insert - reading in the two crime code csv's - end"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PK</th>\n",
-       "      <th>CCR</th>\n",
-       "      <th>AGE</th>\n",
-       "      <th>GENDER</th>\n",
-       "      <th>RACE</th>\n",
-       "      <th>ARRESTTIME</th>\n",
-       "      <th>ARRESTLOCATION</th>\n",
-       "      <th>OFFENSES</th>\n",
-       "      <th>INCIDENTLOCATION</th>\n",
-       "      <th>INCIDENTNEIGHBORHOOD</th>\n",
-       "      <th>INCIDENTZONE</th>\n",
-       "      <th>INCIDENTTRACT</th>\n",
-       "      <th>COUNCIL_DISTRICT</th>\n",
-       "      <th>PUBLIC_WORKS_DIVISION</th>\n",
-       "      <th>X</th>\n",
-       "      <th>Y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1975272</td>\n",
-       "      <td>16158872</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>B</td>\n",
-       "      <td>2016-08-24T12:20:00</td>\n",
-       "      <td>4700 Block Centre AV Pittsburgh, PA 15213</td>\n",
-       "      <td>3929 Retail Theft.</td>\n",
-       "      <td>4700 Block Centre AV Pittsburgh, PA 15213</td>\n",
-       "      <td>Bloomfield</td>\n",
-       "      <td>5</td>\n",
-       "      <td>804.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-79.949277</td>\n",
-       "      <td>40.452551</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        PK       CCR   AGE GENDER RACE           ARRESTTIME  \\\n",
-       "0  1975272  16158872  42.0      F    B  2016-08-24T12:20:00   \n",
-       "\n",
-       "                              ARRESTLOCATION            OFFENSES  \\\n",
-       "0  4700 Block Centre AV Pittsburgh, PA 15213  3929 Retail Theft.   \n",
-       "\n",
-       "                            INCIDENTLOCATION INCIDENTNEIGHBORHOOD  \\\n",
-       "0  4700 Block Centre AV Pittsburgh, PA 15213           Bloomfield   \n",
-       "\n",
-       "  INCIDENTZONE  INCIDENTTRACT  COUNCIL_DISTRICT  PUBLIC_WORKS_DIVISION  \\\n",
-       "0            5          804.0               8.0                    2.0   \n",
-       "\n",
-       "           X          Y  \n",
-       "0 -79.949277  40.452551  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Import & Read Original Pittsburgh Crime Data CSV\n",
     "csv_path3= \"Resources/crime_data.csv\"\n",
-    "master_df = pd.read_csv(csv_path3)\n",
-    "master_df.head(1)"
+    "master_df = pd.read_csv(csv_path3)\n"
    ]
   },
   {
@@ -336,6 +238,9 @@
    "outputs": [],
    "source": [
     "full_crime_df = full_crime_df.dropna(how = 'any')\n",
+    "\n",
+    "full_crime_df = full_crime_df[(full_crime_df.Age > 0) & \n",
+    "                             (full_crime_df.Age < 100)]\n",
     "\n",
     "full_crime_df = full_crime_df.reset_index(drop = True)\n"
    ]
@@ -439,24 +344,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "misdem_ct = 0\n",
-    "felon_ct = 0\n",
-    "murd_ct = 0\n",
-    "for x in off_df['Severity 1']:\n",
-    "    t1 = x.split('-')[0]\n",
-    "    t2 = x.split(' ')[0]\n",
-    "    if t1 == 'M':\n",
-    "        misdem_ct += 1\n",
-    "    elif t1 == 'F':\n",
-    "        felon_ct += 1\n",
-    "    elif t2 == 'Murder':\n",
-    "        murd_ct += 1\n",
+    "# misdem_ct = 0\n",
+    "# felon_ct = 0\n",
+    "# murd_ct = 0\n",
+    "# for x in off_df['Severity 1']:\n",
+    "#     t1 = x.split('-')[0]\n",
+    "#     t2 = x.split(' ')[0]\n",
+    "#     if t1 == 'M':\n",
+    "#         misdem_ct += 1\n",
+    "#     elif t1 == 'F':\n",
+    "#         felon_ct += 1\n",
+    "#     elif t2 == 'Murder':\n",
+    "#         murd_ct += 1\n",
     "    \n",
-    "missing = len(off_df['Offense 1'])- (misdem_ct + felon_ct + murd_ct)         \n",
-    "print(f'We have {misdem_ct} crimes classified as a misdemeanor')\n",
-    "print(f'We have {felon_ct} crimes classified as a felony')\n",
-    "print(f'We have {murd_ct} crimes classified as a murder')\n",
-    "print(f'We have {missing} crimes not categorized')"
+    "# missing = len(off_df['Offense 1'])- (misdem_ct + felon_ct + murd_ct)         \n",
+    "# print(f'We have {misdem_ct} crimes classified as a misdemeanor')\n",
+    "# print(f'We have {felon_ct} crimes classified as a felony')\n",
+    "# print(f'We have {murd_ct} crimes classified as a murder')\n",
+    "# print(f'We have {missing} crimes not categorized')"
    ]
   },
   {
@@ -483,11 +388,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -501,26 +401,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "i = 0 \n",
-    "old = 0\n",
-    "young = 0\n",
-    "while i < len(crime_severity_df['Age']):\n",
-    "    if crime_severity_df['Age'][i] > 99:\n",
-    "        old +=1\n",
-    "    elif crime_severity_df['Age'][i] < 1:\n",
-    "        young += 1\n",
-    "    i += 1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "young"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
