--- a/API call and cleaning/Pittsburgh_CleanExport.ipynb
+++ b/API call and cleaning/Pittsburgh_CleanExport.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,9 +290,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OFFENSES</th>\n",
+       "      <th>Offense 1</th>\n",
+       "      <th>Severity 1</th>\n",
+       "      <th>Offense 2</th>\n",
+       "      <th>Severity 2</th>\n",
+       "      <th>Offense 3</th>\n",
+       "      <th>Severity 3</th>\n",
+       "      <th>Offense 4</th>\n",
+       "      <th>Severity 4</th>\n",
+       "      <th>Offense 5</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Offense 13</th>\n",
+       "      <th>Severity 13</th>\n",
+       "      <th>Offense 14</th>\n",
+       "      <th>Severity 14</th>\n",
+       "      <th>Offense 15</th>\n",
+       "      <th>Severity 15</th>\n",
+       "      <th>Offense 16</th>\n",
+       "      <th>Severity 16</th>\n",
+       "      <th>Offense 17</th>\n",
+       "      <th>Severity 17</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2701(a)(1) Simple Assault - Intent., Know., Re...</td>\n",
+       "      <td>2701(a)(1)</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5503(a)(1)</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13(a)(16) Possession of Controlled Substance /...</td>\n",
+       "      <td>13(a)(16)</td>\n",
+       "      <td>M</td>\n",
+       "      <td>13(a)(32)</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9015 Failure To Appear/Arrest on Attachment Order</td>\n",
+       "      <td>9015</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13(a)(32) Paraphernalia - Use or Possession</td>\n",
+       "      <td>13(a)(32)</td>\n",
+       "      <td>M</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5104 Resisting Arrest or Other Law Enforcement...</td>\n",
+       "      <td>5104</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5507</td>\n",
+       "      <td></td>\n",
+       "      <td>7513</td>\n",
+       "      <td></td>\n",
+       "      <td>3802(a)(1)</td>\n",
+       "      <td></td>\n",
+       "      <td>3802(c)</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            OFFENSES   Offense 1 Severity 1  \\\n",
+       "0  2701(a)(1) Simple Assault - Intent., Know., Re...  2701(a)(1)          M   \n",
+       "1  13(a)(16) Possession of Controlled Substance /...   13(a)(16)          M   \n",
+       "2  9015 Failure To Appear/Arrest on Attachment Order        9015              \n",
+       "3        13(a)(32) Paraphernalia - Use or Possession   13(a)(32)          M   \n",
+       "4  5104 Resisting Arrest or Other Law Enforcement...        5104          M   \n",
+       "\n",
+       "    Offense 2 Severity 2 Offense 3 Severity 3   Offense 4 Severity 4  \\\n",
+       "0  5503(a)(1)                                                          \n",
+       "1   13(a)(32)                                                          \n",
+       "2                                                                      \n",
+       "3                                                                      \n",
+       "4        5507                 7513             3802(a)(1)              \n",
+       "\n",
+       "  Offense 5     ...     Offense 13 Severity 13 Offense 14 Severity 14  \\\n",
+       "0               ...                                                     \n",
+       "1               ...                                                     \n",
+       "2               ...                                                     \n",
+       "3               ...                                                     \n",
+       "4   3802(c)     ...                                                     \n",
+       "\n",
+       "  Offense 15 Severity 15 Offense 16 Severity 16 Offense 17 Severity 17  \n",
+       "0                                                                       \n",
+       "1                                                                       \n",
+       "2                                                                       \n",
+       "3                                                                       \n",
+       "4                                                                       \n",
+       "\n",
+       "[5 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "i = 0\n",
@@ -340,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,9 +573,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Race</th>\n",
+       "      <th>Offenses Severity</th>\n",
+       "      <th>Arrest Time of Day</th>\n",
+       "      <th>Arrest Hour</th>\n",
+       "      <th>Arrest Day of Week</th>\n",
+       "      <th>Arrest Date</th>\n",
+       "      <th>Arrest Month</th>\n",
+       "      <th>Arrest Year</th>\n",
+       "      <th>Temperature Range</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Weather Condition</th>\n",
+       "      <th>Incident Location</th>\n",
+       "      <th>Incident Latitude</th>\n",
+       "      <th>Incident Longitude</th>\n",
+       "      <th>Incident Neighborhood</th>\n",
+       "      <th>Incident Zone</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>B</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Evening (9-12am)</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>12</td>\n",
+       "      <td>February</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>20s</td>\n",
+       "      <td>20.53</td>\n",
+       "      <td>Mostly Cloudy</td>\n",
+       "      <td>1100 Block McKinney LANE Pittsburgh, PA 15205</td>\n",
+       "      <td>40.423529</td>\n",
+       "      <td>-80.035034</td>\n",
+       "      <td>Ridgemont</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>31.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>W</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Early Afternoon (1-4pm)</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>17</td>\n",
+       "      <td>February</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>30s</td>\n",
+       "      <td>32.76</td>\n",
+       "      <td>Overcast</td>\n",
+       "      <td>800 Block Concord ST Pittsburgh, PA 15212</td>\n",
+       "      <td>40.457564</td>\n",
+       "      <td>-79.997924</td>\n",
+       "      <td>East Allegheny</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>36.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>W</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Early Morning (12-3am)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>08</td>\n",
+       "      <td>April</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>30s</td>\n",
+       "      <td>39.39</td>\n",
+       "      <td>Overcast</td>\n",
+       "      <td>Boyd ST &amp; Diamond ST Pittsburgh, PA 15219</td>\n",
+       "      <td>40.438656</td>\n",
+       "      <td>-79.993293</td>\n",
+       "      <td>Bluff</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>60.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>W</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Late Morning (9am-12pm)</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>10</td>\n",
+       "      <td>April</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>30s</td>\n",
+       "      <td>32.63</td>\n",
+       "      <td>Overcast</td>\n",
+       "      <td>Forbes AV &amp; Armstrong TUN Pittsburgh, PA 15219</td>\n",
+       "      <td>40.437971</td>\n",
+       "      <td>-79.992052</td>\n",
+       "      <td>Bluff</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>54.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>B</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Early Morning (12-3am)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>12</td>\n",
+       "      <td>April</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>40s</td>\n",
+       "      <td>47.32</td>\n",
+       "      <td>Clear</td>\n",
+       "      <td>1600 Block Forbes AV Pittsburgh, PA 15219</td>\n",
+       "      <td>40.437377</td>\n",
+       "      <td>-79.983870</td>\n",
+       "      <td>Bluff</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Age Gender Race Offenses Severity       Arrest Time of Day  Arrest Hour  \\\n",
+       "0  24.0      F    B                 M         Evening (9-12am)           21   \n",
+       "1  31.0      M    W                 M  Early Afternoon (1-4pm)           15   \n",
+       "2  36.0      M    W                 M   Early Morning (12-3am)            2   \n",
+       "3  60.0      M    W                 M  Late Morning (9am-12pm)            9   \n",
+       "4  54.0      M    B                 M   Early Morning (12-3am)            1   \n",
+       "\n",
+       "  Arrest Day of Week Arrest Date Arrest Month Arrest Year Temperature Range  \\\n",
+       "0             Friday          12     February        2016               20s   \n",
+       "1          Wednesday          17     February        2016               30s   \n",
+       "2             Friday          08        April        2016               30s   \n",
+       "3             Sunday          10        April        2016               30s   \n",
+       "4            Tuesday          12        April        2016               40s   \n",
+       "\n",
+       "   Temperature Weather Condition  \\\n",
+       "0        20.53     Mostly Cloudy   \n",
+       "1        32.76          Overcast   \n",
+       "2        39.39          Overcast   \n",
+       "3        32.63          Overcast   \n",
+       "4        47.32             Clear   \n",
+       "\n",
+       "                                Incident Location  Incident Latitude  \\\n",
+       "0   1100 Block McKinney LANE Pittsburgh, PA 15205          40.423529   \n",
+       "1       800 Block Concord ST Pittsburgh, PA 15212          40.457564   \n",
+       "2       Boyd ST & Diamond ST Pittsburgh, PA 15219          40.438656   \n",
+       "3  Forbes AV & Armstrong TUN Pittsburgh, PA 15219          40.437971   \n",
+       "4       1600 Block Forbes AV Pittsburgh, PA 15219          40.437377   \n",
+       "\n",
+       "   Incident Longitude Incident Neighborhood Incident Zone  \n",
+       "0          -80.035034             Ridgemont             6  \n",
+       "1          -79.997924        East Allegheny             1  \n",
+       "2          -79.993293                 Bluff             2  \n",
+       "3          -79.992052                 Bluff             2  \n",
+       "4          -79.983870                 Bluff             2  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "crime_severity_df = full_crime_df.copy()\n",
     "crime_severity_df['Offenses Severity'] = off_df['Severity 1']\n",
@@ -389,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
