Read new temp data into plots notebook

--- a/plots.ipynb
+++ b/plots.ipynb
@@ -224,10 +224,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Weather Condition</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-02-12</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>20.53</td>\n",
+       "      <td>Mostly Cloudy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-02-13</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>12.23</td>\n",
+       "      <td>Overcast</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-02-14</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>17.69</td>\n",
+       "      <td>Clear</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-02-15</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>33.15</td>\n",
+       "      <td>Overcast</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-02-16</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>34.92</td>\n",
+       "      <td>Light Snow</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date  Year  Temperature Weather Condition\n",
+       "0  2016-02-12  2016        20.53     Mostly Cloudy\n",
+       "1  2016-02-13  2016        12.23          Overcast\n",
+       "2  2016-02-14  2016        17.69             Clear\n",
+       "3  2016-02-15  2016        33.15          Overcast\n",
+       "4  2016-02-16  2016        34.92        Light Snow"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_path2= \"all_date_temp_data.csv\"\n",
+    "weather_df = pd.read_csv(csv_path2)\n",
+    "del weather_df['Unnamed: 0']\n",
+    "weather_df.head()"
+   ]
   },
   {
    "cell_type": "code",
