misdemeanor/ felony fully written out in dataframe and csv

--- a/API call and cleaning/Pittsburgh_CleanExport.ipynb
+++ b/API call and cleaning/Pittsburgh_CleanExport.ipynb
@@ -573,9 +573,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:20: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -623,7 +637,7 @@
        "      <td>24.0</td>\n",
        "      <td>F</td>\n",
        "      <td>B</td>\n",
-       "      <td>M</td>\n",
+       "      <td>Misdemeanor</td>\n",
        "      <td>Evening (9-12am)</td>\n",
        "      <td>21</td>\n",
        "      <td>Friday</td>\n",
@@ -644,7 +658,7 @@
        "      <td>31.0</td>\n",
        "      <td>M</td>\n",
        "      <td>W</td>\n",
-       "      <td>M</td>\n",
+       "      <td>Misdemeanor</td>\n",
        "      <td>Early Afternoon (1-4pm)</td>\n",
        "      <td>15</td>\n",
        "      <td>Wednesday</td>\n",
@@ -665,7 +679,7 @@
        "      <td>36.0</td>\n",
        "      <td>M</td>\n",
        "      <td>W</td>\n",
-       "      <td>M</td>\n",
+       "      <td>Misdemeanor</td>\n",
        "      <td>Early Morning (12-3am)</td>\n",
        "      <td>2</td>\n",
        "      <td>Friday</td>\n",
@@ -686,7 +700,7 @@
        "      <td>60.0</td>\n",
        "      <td>M</td>\n",
        "      <td>W</td>\n",
-       "      <td>M</td>\n",
+       "      <td>Misdemeanor</td>\n",
        "      <td>Late Morning (9am-12pm)</td>\n",
        "      <td>9</td>\n",
        "      <td>Sunday</td>\n",
@@ -707,7 +721,7 @@
        "      <td>54.0</td>\n",
        "      <td>M</td>\n",
        "      <td>B</td>\n",
-       "      <td>M</td>\n",
+       "      <td>Misdemeanor</td>\n",
        "      <td>Early Morning (12-3am)</td>\n",
        "      <td>1</td>\n",
        "      <td>Tuesday</td>\n",
@@ -729,11 +743,11 @@
       ],
       "text/plain": [
        "    Age Gender Race Offenses Severity       Arrest Time of Day  Arrest Hour  \\\n",
-       "0  24.0      F    B                 M         Evening (9-12am)           21   \n",
-       "1  31.0      M    W                 M  Early Afternoon (1-4pm)           15   \n",
-       "2  36.0      M    W                 M   Early Morning (12-3am)            2   \n",
-       "3  60.0      M    W                 M  Late Morning (9am-12pm)            9   \n",
-       "4  54.0      M    B                 M   Early Morning (12-3am)            1   \n",
+       "0  24.0      F    B       Misdemeanor         Evening (9-12am)           21   \n",
+       "1  31.0      M    W       Misdemeanor  Early Afternoon (1-4pm)           15   \n",
+       "2  36.0      M    W       Misdemeanor   Early Morning (12-3am)            2   \n",
+       "3  60.0      M    W       Misdemeanor  Late Morning (9am-12pm)            9   \n",
+       "4  54.0      M    B       Misdemeanor   Early Morning (12-3am)            1   \n",
        "\n",
        "  Arrest Day of Week Arrest Date Arrest Month Arrest Year Temperature Range  \\\n",
        "0             Friday          12     February        2016               20s   \n",
@@ -764,14 +778,14 @@
        "4          -79.983870                 Bluff             2  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "crime_severity_df = full_crime_df.copy()\n",
-    "crime_severity_df['Offenses Severity'] = off_df['Severity 1']\n",
+    "crime_severity_df['Offenses Severity'] = off_df['Severity 1'].copy()\n",
     "\n",
     "\n",
     "for x in range(len(crime_severity_df['Offenses Severity'])):\n",
@@ -783,13 +797,23 @@
     "\n",
     "\n",
     "crime_severity_df = crime_severity_df.reset_index(drop = True)\n",
+    "\n",
+    "for x in range(len(crime_severity_df['Offenses Severity'])):\n",
+    "    if crime_severity_df['Offenses Severity'][x] == 'M':\n",
+    "        crime_severity_df['Offenses Severity'][x] = 'Misdemeanor'\n",
+    "    \n",
+    "    elif crime_severity_df['Offenses Severity'][x] == 'F':\n",
+    "        crime_severity_df['Offenses Severity'][x] = 'Felony' \n",
+    "    \n",
+    "    \n",
+    "\n",
     "crime_severity_df.head()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
